# castle-games

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LINUX.md  README.md  WEB-INTERFACE.md  azure-pipelines-mac.yml  azure-pipelines-win.yml  azure-pipelines.yml  build.nix  format.sh  license.txt
.circleci/: config.yml
base/: bridge.lua  (+14 more)
linux/: CMakeLists.txt  Dockerfile  README.md  build_docker_image.sh  conf.lua  docker.sh  run_cmake.sh  server.cpp  test_docker.sh
linux/aws-sdk/: build_aws_sdk.sh
linux/deploy/: Dockerfile  build_docker_image.sh  upload_gcr.sh
linux/gamelift/: .gitignore  build_gamelift_server_sdk.sh  current_fleet_id.sh  deploy_gamelift.sh  deploy_test.sh  kill_process.js  prune_libs.sh  ssh_gamelift.sh  ssh_test_instance.sh  test_instance_ip.txt  testgameliftkey.pem  view_game_sessions.sh
linux/gamelift/GameLift-Cpp-ServerSDK/: CMakeLists.txt  LICENSE_AMAZON_GAMELIFT_SDK.TXT  NOTICE_C++_AMAZON_GAMELIFT_SDK.TXT  README.md
linux/gamelift/GameLift-Cpp-ServerSDK/cmake/: BuildLocation.cmake  BuildType.cmake  CMakeLists.txt.in  External_boost.cmake  External_exampleapp.cmake  External_protobuf.cmake  External_serversdk.cmake  External_sioclient.cmake  External_test.cmake  Findsioclient.cmake  download_dir.cmake  sioclient.CMakeLists.txt
linux/gamelift/GameLift-Cpp-ServerSDK/gamelift-server-sdk/: CMakeLists.txt  aws-cpp-sdk-gamelift-serverConfig.cmake  exports.version
linux/gamelift/GameLift-Cpp-ServerSDK/gamelift-server-sdk/include/aws/gamelift/common/: Outcome.h
linux/gamelift/GameLift-Cpp-ServerSDK/gamelift-server-sdk/source/aws/gamelift/common/: GameLiftCommonState.cpp
linux/gamelift/GameLift-Cpp-ServerSDK/gamelift-server-sdk/source/aws/gamelift/server/: AuxProxyMessageSender.cpp  GameLiftServerAPI.cpp  GameLiftServerState.cpp  LogParameters.cpp  Network.cpp
linux/gamelift/GameLift-Cpp-ServerSDK/release-notes/: 3.1.5-release-notes.txt  3.1.6-release-notes.txt  3.1.7-release-notes.txt  3.2.0-release.notes.txt
linux/gamelift/GameLiftLocal/: LICENSE_AMAZON_GAMELIFT_LOCAL.TXT  README.md
linux/gamelift/GameLiftLocal/release-notes/: 1.0.0-release-notes.txt  1.0.1-release-notes.txt  1.0.2-release-notes.txt
linux/gamelift/gamelift-build/include/aws/gamelift/common/: GameLiftErrors.h
linux/gamelift/gamelift-build/include/aws/gamelift/internal/: GameLiftServerState.h
linux/gamelift/gamelift-build/include/aws/gamelift/internal/network/: AuxProxyMessageSender.h
linux/gamelift/gamelift-build/include/aws/gamelift/server/: GameLiftServerAPI.h
linux/gamelift/gamelift-build/include/aws/gamelift/server/model/: AttributeValue.h  DescribePlayerSessionsResult.h
linux/gamelift/gamelift-build/lib/: libboost_random.so.1.61.0  libboost_system.so.1.61.0  libprotobuf-lite.la  libprotoc.la  libprotoc.so.13
linux/gamelift/gamelift-build/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
linux/gamelift/gamelift-download-cache/: README.md
linux/gamelift/gamelift-upload/: install.sh
linux/gamelift/gamelift-upload/base/: conf.lua  jsEvents.lua  main.lua  parseLua.lua  portal.lua  share.lua  splash.lua
linux/gamelift/gamelift-upload/base/imgui/: test.lua
linux/gamelift/gamelift-upload/base/tui/: font_awesome.lua
linux/gamelift/gamelift-upload/lib/: libGLU.so.1  libGLX_indirect.so.0  libGLdispatch.so.0.0.0  libSDL2.la  libX11-xcb.so.1  libX11.so.6  libboost_date_time.so.1.61.0  libprotobuf-lite.so.13  libprotobuf.la  libtheora.so.0  libtheoradec.so.1.1.4  libtheoraenc.so.1  libvorbisenc.so.2  libvorbisfile.so.3  libxcb-composite.so.0  libxcb-damage.so.0.0.0  libxcb-record.so.0.0.0  libxcb-res.so.0  libxcb-shape.so.0.0.0  libxcb-xf86dri.so.0  libxcb-xinerama.so.0.0.0  libxcb-xinput.so.0  libxcb-xtest.so.0
linux/gamelift/gamelift-upload/lib-gcc/: README.md  libasan.la  libatomic.la  libatomic.so.1.2.0  libcc1.la  libcc1.so.0.0.0  libcilkrts.la  libcilkrts.so.5.0.0  libgcc_s.so.1  libgomp.la  libgomp.so.1.0.0  libitm.la  libitm.so.1.0.0  liblsan.la  liblsan.so.0.0.0  libmpx.la  libmpx.so.2.0.1  libmpxwrappers.la  libmpxwrappers.so.2.0.1  libquadmath.la  libquadmath.so.0.0.0  libssp.la  libssp.so.0.0.0  libssp_nonshared.la  libstdc++.la  libstdc++.so.6.0.24-gdb.py  libstdc++fs.la  libsupc++.la  libtsan.la  libubsan.la  libubsan.so.0.0.0
linux/holy-build-box/: Dockerfile  build_docker_image.sh  docker.sh
linux/lib/: libGL.so.1  libGLESv1_CM.so.1.0.0  libmodplug.so.1  libmpg123.so.0  libvorbis.so.0  libxcb-glx.so.0  libxcb-present.so.0.0.0  libxcb-randr.so.0.1.0  libxcb-screensaver.so.0.0.0  libxcb-sync.so.1.0.0  libxcb-xfixes.so.0  libxcb-xselinux.so.0  libxcb-xvmc.so.0
linux/openssl-1.0.2l/: Makefile
linux/openssl-1.0.2l/crypto/: buildinf.h
linux/src/: aws.cpp  aws.h  httpServer.cpp  httpServer.h  logs.cpp  logs.h  lua.cpp  lua.h  server.cpp  timer.cpp  timer.h
linux/src/simple-web-server/: client_http.hpp  client_https.hpp  crypto.hpp  server_http.hpp  server_https.hpp  status_code.hpp  utility.hpp
linux/sync.lua/: example_basic.lua  sync.lua
linux/test/: Dockerfile  blank_docker.sh  build_docker_image.sh  create_game_session.sh  docker.sh  run_test_server.sh  test.sh
linux/test/GameLiftLocal/: NOTICE_AMAZON_GAMELIFT_LOCAL.TXT
linux/test/GameLiftLocal/release-notes/: 1.0.3-release-notes.txt
megasource/: .gitignore  .hg_archival.txt  .hgignore  CMakeLists.txt  appveyor.yml  build_release.sh  configure_cmake.sh  kill_castle.sh  release.sh  run_cmake.sh  upload_release.sh
megasource/extra/: README.md  castle.rc  install_redist.bat  license.txt  resource.h
megasource/installer/: CMakeLists.txt
megasource/libs/SDL2/: WhatsNew.txt
megasource/libs/SDL2/src/video/: SDL_video.c
megasource/libs/SDL2/src/video/windows/: SDL_windowswindow.c
megasource/libs/libmodplug-0.8.8.4/: CMakeLists.txt
megasource/libs/libogg-1.3.2/: CMakeLists.txt
megasource/libs/libtheora-1.1.1/: CMakeLists.txt
megasource/libs/libvorbis-1.3.5/: CMakeLists.txt
megasource/libs/lua-5.1.5/: CMakeLists.txt
megasource/libs/mpg123-1.25.6/: CMakeLists.txt
megasource/libs/physfs-3.0.1/src/: physfs_platform_windows.c
megasource/src/: test.cpp
(+982 files in other folders)
